Fix month format

--- a/TSTut3.ipynb
+++ b/TSTut3.ipynb
@@ -285,7 +285,7 @@
     "flight_df['day']='01'\n",
     "\n",
     "# We need to turn the month names to integers\n",
-    "flight_df['month'] = pd.to_datetime(flight_df.month, format='%B').dt.month\n",
+    "flight_df['month'] = pd.to_datetime(flight_df.month, format='%b').dt.month\n",
     "# Create a date column with our new dates\n",
     "flight_df['date'] = pd.to_datetime(flight_df[['year', 'month', 'day']])\n",
     "# Delete year, month and day columns\n",
