--- a/TSTut4.ipynb
+++ b/TSTut4.ipynb
@@ -310,7 +310,7 @@
     "# we will use it (See last video for what this is doing in detail)\n",
     "flight_df = sns.load_dataset('flights')\n",
     "flight_df['day']='01'\n",
-    "flight_df['month'] = pd.to_datetime(flight_df.month, format='%B').dt.month\n",
+    "flight_df['month'] = pd.to_datetime(flight_df.month, format='%b').dt.month\n",
     "flight_df['date'] = pd.to_datetime(flight_df[['year', 'month', 'day']])\n",
     "flight_df.drop(['year', 'month', 'day'], axis=1, inplace=True)\n",
     "flight_df.set_index('date', inplace=True)\n",
